fix(generator): OpenAPI generator issues discovered while testing against petstore example (#1679)